--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/a0d6ab0ef6.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 
     <title>InSta Feed</title>
 </head>
@@ -99,51 +99,44 @@
                 </div>
             </div>
         </div>
-        <div class="tab-pane fade bg-secondary" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-            <div class="container">
-                <div class="row align-items-start">
+        <div class="tab-pane fade bg-secondary " id="profile" role="tabpanel" aria-labelledby="profile-tab">
+            <div class="container d-flex justify-content-center">
+                <div class="column bg-light text-dark">
                     <div class="col-4 p-3 mb-2 bg-secondary text-white">
                     </div>
-                    <div class="container col-6 mx-auto">
-                        <h2>First Photo</h2>
-                    <span>12/14</span>
-                </div>
-                <div class="image">
-                    <img src="https://i.pinimg.com/originals/41/1f/b3/411fb3c692ca8addf7703b3558f326c1.jpg"></img>
-                </div>
-                <div>
-                    <p>This is my first photo of the feed this is a multiline comment for the testing process. I am
-                        learning to code with #BreatheCode</p>
-                </div>
+                    <div class="container col-8" style="width: auto;">
+                        <div class="d-flex justify-content-start">
+                            <h2>First Photo</h2>
+                        </div>
+                        <div class="d-flex justify-content-end">
+                            <span>12/14</span>
+                        </div>
                     </div>
-                    <div class="col p-3 mb-2 bg-secondary text-white">
+                    <div class="image">
+                        <img src="https://i.pinimg.com/originals/41/1f/b3/411fb3c692ca8addf7703b3558f326c1.jpg"
+                            class="w-100"></img>
                     </div>
-                </div>
-                <div class="row align-items-center">
-                    <div class="col">
-                        One of three columns
+                    <div>
+                        <p><strong>23 Likes</strong></p>
                     </div>
-                    <div class="col">
-                        One of three columns
+                    <div>
+                        <p>This is my first photo of the feed this is a multiline comment for the testing process. I am
+                            learning to code with #BreatheCode</p>
                     </div>
-                    <div class="col">
-                        One of three columns
-                    </div>
-                </div>
-                <div class="row align-items-end">
-                    <div class="col">
-                        One of three columns
-                    </div>
-                    <div class="col">
-                        One of three columns
-                    </div>
-                    <div class="col">
-                        One of three columns
+                    <div class=" ps-2 d-flex align-items-start" style="width: auto;">
+                        <div>
+                            <i class="far fa-heart fa-2x"></i>
+                        </div>
+                        <div>
+                            <p>Comment...</p>
+                        </div>
+                        <div class="pe-2 text-end">
+                            <i class="fas fa-ellipsis-v fa-2x"></i>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
     </div>
 
 
