--- a/index.html
+++ b/index.html
@@ -99,56 +99,65 @@
                 </div>
             </div>
         </div>
-        <div class="tab-pane fade bg-secondary " id="profile" role="tabpanel" aria-labelledby="profile-tab">
-            <div class="container d-flex justify-content-center">
-                <div class="column bg-light text-dark">
-                    <div class="col-4 p-3 mb-2 bg-secondary text-white">
+        <div class="tab-pane fade mx-auto" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+            <div class="container bg-light w-50">
+                <div class="post mb-5">
+                    <div class="row">
+                        <div class="col-6">My First Photo</div>
+                        <div class="col-6 text-end">12/14</div>
                     </div>
-                    <div class="container col-8" style="width: auto;">
-                        <div class="d-flex justify-content-start">
-                            <h2>First Photo</h2>
-                        </div>
-                        <div class="d-flex justify-content-end">
-                            <span>12/14</span>
-                        </div>
-                    </div>
-                    <div class="image">
+                    <div class="row">
                         <img src="https://i.pinimg.com/originals/41/1f/b3/411fb3c692ca8addf7703b3558f326c1.jpg"
-                            class="w-100"></img>
-                    </div>
-                    <div>
-                        <p><strong>23 Likes</strong></p>
-                    </div>
-                    <div>
-                        <p>This is my first photo of the feed this is a multiline comment for the testing process. I am
-                            learning to code with #BreatheCode</p>
-                    </div>
-                    <div class=" ps-2 d-flex align-items-start" style="width: auto;">
-                        <div>
-                            <i class="far fa-heart fa-2x"></i>
+                            class="w-auto g-0">
+                        <div class="col-12">
+                            <p><strong>23 Likes</strong></p>
                         </div>
-                        <div>
-                            <p>Comment...</p>
+                        <div class="col-12">
+                            <p>This is my first photo of the feed. This is a multi line command for testing purposes I
+                                am
+                                learning to code with #BreatheCode.</p>
                         </div>
-                        <div class="pe-2 text-end">
-                            <i class="fas fa-ellipsis-v fa-2x"></i>
+                    </div>
+                    <div class="row">
+                        <div class="col-6 far fa-heart fa-2x"></i>
+                            Comment...</div>
+                        <div class="col-6 text-end fas fa-ellipsis-v fa-2x"></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6">My First Photo</div>
+                        <div class="col-6 text-end">12/14</div>
+                    </div>
+                    <div class="row">
+                        <img src="https://i.pinimg.com/originals/41/1f/b3/411fb3c692ca8addf7703b3558f326c1.jpg"
+                            class="w-auto g-0">
+                        <div class="col-12">
+                            <p><strong>23 Likes</strong></p>
                         </div>
+                        <div class="col-12">
+                            <p>This is my first photo of the feed. This is a multi line command for testing purposes I
+                                am
+                                learning to code with #BreatheCode.</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6 far fa-heart fa-2x"></i>
+                            Comment...</div>
+                        <div class="col-6 text-end fas fa-ellipsis-v fa-2x"></div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
 
 
-    <!-- Optional JavaScript; choose one of the two! -->
+        <!-- Optional JavaScript; choose one of the two! -->
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-        crossorigin="anonymous"></script>
+        <!-- Option 1: Bootstrap Bundle with Popper -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+            crossorigin="anonymous"></script>
 
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
+        <!-- Option 2: Separate Popper and Bootstrap JS -->
+        <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
     -->
